--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,4 @@
-Django>=2.1.3,<2.2.0
-djangorestframework>=3.9.0,<3.10.0
+Django=2.2.12
+djangorestframework=3.9.4
+drf-haystack==1.8.9
+psycopg2=2.8.0
