--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Django=2.2.12
-djangorestframework=3.9.4
+Django==2.2.12
+djangorestframework==3.9.4
 drf-haystack==1.8.9
-psycopg2=2.8.0
+psycopg2==2.8.0
+elasticsearch>=2.0.0,<3.0.0
