--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,9 @@ services:
     volumes:
       - ./app:/app
     command: >
-      sh -c "python manage.py wait_for_db &&
-             python manage.py migrate &&
-             python manage.py runserver 0.0.0.0:8000"
+      sh -c "python3 manage.py wait_for_db &&
+             python3 manage.py migrate &&
+             python3 manage.py runserver 0.0.0.0:8000"
     environment:
       - DB_HOST=db
       - DB_NAME=app
@@ -20,6 +20,14 @@ services:
     depends_on:
       - db
 
+  async:
+    build:
+      context: .
+    volumes:
+      - ./app:/app
+    command: >
+      sh -c "python3 ./content/scripts/youtube_video_ingestion.py"
+
   db:
     image: postgres:10-alpine
     environment:
@@ -27,15 +35,8 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
 
-  es01:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.11.1
-    environment:
-    - discovery.seed_hosts='127.0.0.1'
-    volumes:
-    - data01:/usr/share/elasticsearch/data
+  elasticsearch:
+    image: launcher.gcr.io/google/elasticsearch2
     ports:
-    - 9200:9200
-
-volumes:
-  data01:
-    driver: local
+      - "9200:9200"
+      - "9300:9300"
