--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     command: >
       sh -c "python3 manage.py wait_for_db &&
              python3 manage.py migrate &&
-             python3 ./content/scripts/youtube_video_ingestion.py"
+             python3 content/scripts/youtube_video_ingestion.py"
     environment:
       - DB_HOST=db
       - DB_NAME=app
