--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
     depends_on:
       - db
       - elasticsearch
+
   async_ingestion:
     build:
       context: .
@@ -28,7 +29,6 @@ services:
       - ./app:/app
     command: >
       sh -c "python3 manage.py wait_for_db &&
-             python3 manage.py migrate &&
              python3 content/scripts/youtube_video_ingestion.py"
     environment:
       - DB_HOST=db
@@ -47,8 +47,8 @@ services:
       - ./app:/app
     command: >
       sh -c "python3 manage.py wait_for_db &&
-             python3 manage.py migrate &&
-             ./manage.py rebuild_index --noinput"
+             chmod +x ./indexing_script.sh &&
+             sh ./indexing_script.sh"
     environment:
       - DB_HOST=db
       - DB_NAME=app
