--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,8 +47,8 @@ services:
       - ./app:/app
     command: >
       sh -c "python3 manage.py wait_for_db &&
-             chmod +x ./indexing_script.sh &&
-             sh ./indexing_script.sh"
+             python3 manage.py rebuild_index --noinput &&
+             watch -n 10 python3 manage.py update_index --age=1"
     environment:
       - DB_HOST=db
       - DB_NAME=app
